--- a/assets/Media/common-media.css
+++ b/assets/Media/common-media.css
@@ -1,3 +1,17 @@
+@media screen and (max-width: 992px) {
+
+    .nav-logo a {
+        font-size: 18px;
+    }
+
+
+    .cta-content p {
+        padding: 0;
+    }
+
+
+}
+
 @media screen and (max-width: 768px) {
     :root {
         --primary-60: #ECF3F1;
@@ -199,5 +213,37 @@
 
     .subdropdown-content a h4 {
         color: var(--subtitle-color);
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .section-title h2 {
+        font-size: 36px;
+    }
+
+    .section-title p {
+        margin-bottom: 4px;
+        font-size: 14px;
+    }
+
+    .cta-content p {
+        font-size: 14px;
+    }
+
+    .cta-content h1 {
+        font-size: 26px;
+    }
+
+}
+
+@media screen and (max-width: 425px) {
+    :root {
+        --card-padding: 20px;
+    }
+
+
+    #copyright p {
+        font-size: 14px;
+        text-align: center;
     }
 }
