--- a/assets/styleSheet/style.css
+++ b/assets/styleSheet/style.css
@@ -81,30 +81,7 @@
 }
 
 /* ===================================== */
-/* Specialization */
-.experties-card {
-    height: 100%;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    padding: 60px 40px;
-    border-radius: 10px;
-    border: 1px solid var(--border-color);
-}
-
-.experties-card i {
-    font-size: 60px;
-    color: var(--accent-10);
-}
-
-.experties-card h3 {
-    color: var(--subtitle-color);
-    font-size: 20px;
-    margin: 20px 0;
-    font-weight: 600;
-}
-
-/* ===================================== */
-/* Specialization */
+/* Personal Information */
 
 .experience-padding {
     margin-top: 30px;
