--- a/assets/Media/services-media.css
+++ b/assets/Media/services-media.css
@@ -34,6 +34,11 @@
 }
 
 @media screen and (max-width: 575px) {
+
+    .steps i {
+        font-size: 48px;
+    }
+
     .service-hero-text h1 {
         font-size: 28px;
     }
