--- a/assets/Media/common-media.css
+++ b/assets/Media/common-media.css
@@ -246,6 +246,10 @@
         font-size: 26px;
     }
 
+    .form-ref a {
+        margin: 0;
+    }
+
 }
 
 @media screen and (max-width: 425px) {
@@ -253,9 +257,18 @@
         --card-padding: 20px;
     }
 
+    .form-left {
+        padding: 20px 20px;
+    }
+
+    .form-ref a {
+        margin: 0;
+        font-size: 14px;
+    }
 
     #copyright p {
         font-size: 14px;
         text-align: center;
     }
+
 }
